k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-next
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: portfolio-next
          image: ghcr.io/cyrildesch/portfolio-next:staging
