k8s/overlays/staging/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-next
spec:
  hostnames:
  - "staging-portfolio.cyrildeschamps.fr"
